[gd_scene load_steps=9 format=3 uid="uid://wp7gf3jn2ixb"]

[ext_resource type="Script" path="res://Menu_Interface.gd" id="1_wcxcd"]
[ext_resource type="Texture2D" uid="uid://bb1otc3lr810g" path="res://Assets/Background/background.png" id="2_ovwwa"]
[ext_resource type="PackedScene" uid="uid://dy4wnm8hd1fpu" path="res://player_character.tscn" id="3_wvyqx"]
[ext_resource type="PackedScene" uid="uid://c30q2yd6cqwjy" path="res://mainmenu_play_button.tscn" id="4_7crig"]
[ext_resource type="PackedScene" uid="uid://daf3idayk00t4" path="res://mainmenu_simulate_button.tscn" id="5_nb600"]
[ext_resource type="PackedScene" uid="uid://o4ywk5eo8vrp" path="res://mainmenu_editor_button.tscn" id="6_ij7uv"]
[ext_resource type="PackedScene" uid="uid://b01ahr3ttvrcj" path="res://mainmenu_options_button.tscn" id="7_ucxkj"]
[ext_resource type="PackedScene" uid="uid://bprfaytmumg7r" path="res://mainmenu_quit_button.tscn" id="8_qgg2d"]

[node name="Menu_Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wcxcd")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(320, 210)
scale = Vector2(1.99669, 2.0012)
texture = ExtResource("2_ovwwa")

[node name="Player" parent="." instance=ExtResource("3_wvyqx")]
position = Vector2(85, 312)

[node name="Play" parent="." instance=ExtResource("4_7crig")]
layout_mode = 0
offset_left = 272.0
offset_top = 199.0
offset_right = 373.0
offset_bottom = 223.0

[node name="Simulate" parent="." instance=ExtResource("5_nb600")]
layout_mode = 0
offset_left = 271.143
offset_top = 228.987
offset_right = 371.143
offset_bottom = 252.987

[node name="Editor" parent="." instance=ExtResource("6_ij7uv")]
layout_mode = 0
offset_left = 270.542
offset_top = 258.659
offset_right = 370.542
offset_bottom = 282.659
flat = true

[node name="Options" parent="." instance=ExtResource("7_ucxkj")]
layout_mode = 0
offset_left = 271.842
offset_top = 287.716
offset_right = 371.843
offset_bottom = 311.716

[node name="Quit" parent="." instance=ExtResource("8_qgg2d")]
layout_mode = 0
offset_left = 272.615
offset_top = 317.16
offset_right = 372.615
offset_bottom = 341.16

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Editor" to="." method="_on_editor_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
